# drip

./: .gitignore  .gitkeep  .gitmodules  README.md  index.html  input.css  package.json  tailwind.config.js
.github/workflows/: ci.yml
contracts/: foundry.toml
contracts/src/: Drop.sol
contracts/test/: Drop.t.sol
rust/: Cargo.toml  README.md
rust/src/: error.rs  lib.rs  main.rs
rust/src/app/: args.rs  config.rs  mod.rs  state.rs
rust/src/app/ops/: gen.rs  mod.rs  pull.rs  push.rs
rust/src/eth/: cid_sol.rs  contract.rs  drop.rs  eth_client.rs  eth_http_provider.rs  eth_provider.rs  mod.rs  share_sol.rs
rust/src/ipfs/: ipfs_gateway.rs  ipfs_rpc.rs  mod.rs
rust/src/types/: ipld.rs  keys.rs  mod.rs  share.rs
rust/src/wasm/: README.md  mod.rs
src/: RootCid.sol
