[package]
name = "drip"
version = "0.0.0"
edition = "2021"
license = "MIT"

[dependencies]
alloy = { version = "0.2.0", features = [
  "dyn-abi",
  "signer-local",
  "reqwest",
  "rpc-client",
  "sol-types",
  "transports",
  "transport-http",
  "providers",
  "network",
  "json-abi",
  "contract",
] }

async-trait = "^0.1"
anyhow = { version = "^1", features = ["std"] }
blake3 = "^1.5"
chrono = { version = "^0.4", features = ["serde"] }
cid = { version = "^0.11", features = ["serde-codec"] }
futures-util = "^0.3"
http = "^0.2"
libipld = "0.16.0"
rand = "^0.8"
reqwest = { version = "^0.11", features = ["trust-dns"] }
serde = "^1"
serde_json = "^1"
thiserror = "^1"
tracing = "^0.1"
tracing-subscriber = "^0.3"
url = { version = "^2", features = ["serde"] }
alloy-sol-types = "0.7.7"
secp256k1 = { version = "0.29.0", features = ["rand", "global-context"] }
hex = "0.4.3"
sha2 = "0.10.8"
aes-kw = { version = "0.2.1", features = ["alloc"] }

[build-dependencies]
dotenv = "^0.15"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "^4", features = ["derive"] }
ipfs-api-backend-hyper = { git = "https://github.com/amiller68/rust-ipfs-api", features = [
  "with-hyper-tls",
] }
tokio = { version = "^1.32", features = ["macros", "rt-multi-thread", "time"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "^0.1"
web-sys = { version = "^0.3", features = ["HtmlMediaElement"] }
